--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
     // Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+    // Material Search Bar
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
+    // AsyncTask
+    implementation 'com.label305:asynctask:1.0.0'
 
 
 }
